category module updated
